[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Roman Utolin <romautolin@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.cli:get_parser"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
