[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Roman Utolin <romautolin@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.cli:get_parser"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
requests-mock = "^1.10.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
